test/parse-checks/func-at-filescope-3.good
line 3: error: function 'bar' can only be declared at file scope
